fix: wrong font height in brand-name

--- a/assets/_sass/components/left-nav/_structure.scss
+++ b/assets/_sass/components/left-nav/_structure.scss
@@ -189,7 +189,6 @@ $nav-item-border: darken($navbar-default-bg, 8%);
         h4 {
             font-family: $headings-font-family !important;
             font-weight: $presidium-typography-h4-font-weight !important;
-            line-height: $presidium-typography-h4-line-height !important;
             font-size: 18px !important;
         }
 
